Update copy action in xeus notebook

--- a/Solar2D/io.ipynb
+++ b/Solar2D/io.ipynb
@@ -2,520 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e5c74c7f-379a-4c34-9c1f-de24a7c26a67",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " test\n"
-     ]
-    }
-   ],
-   "source": [
-    "-- get user input\n",
-    "the_input = io.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1ca8d063-b779-4a11-ad2e-eade6be69c3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xlua rocks! \n"
-     ]
-    }
-   ],
-   "source": [
-    "-- Opens a file in write\n",
-    "file = io.open(\"test.txt\", \"w\")\n",
-    "\n",
-    "-- sets the default output file as test.txt\n",
-    "io.output(file)\n",
-    "\n",
-    "-- write to file\n",
-    "io.write(\"xlua rocks!\")\n",
-    "\n",
-    "-- closes the open file\n",
-    "io.close(file)\n",
-    "\n",
-    "-- make stdout the default again\n",
-    "io.output(io.stdout)\n",
-    "\n",
-    "-- Opens a file in read\n",
-    "file = io.open(\"test.txt\", \"r\")\n",
-    "\n",
-    "-- sets the default input file as test.lua\n",
-    "io.input(file)\n",
-    "\n",
-    "-- prints the first line of the file\n",
-    "print(io.read())\n",
-    "\n",
-    "-- closes the open file\n",
-    "io.close(file)\n",
-    "\n",
-    "-- make stdout the default again\n",
-    "io.input(io.stdin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "810a6d0f-9767-4e1c-b0c7-cd4e1b51515f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "026842a5-28ec-45da-b8ce-d754196c1ad6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-- make sure io.read is working again\n",
-    "-- io.input(io.stdin)\n",
-    "the_input = io.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "6e3d6cba",
    "metadata": {},
    "outputs": [],
    "source": [
     "package.cpath=package.cpath .. ';/Users/ymmtny/.luarocks/lib/lua/5.4/?.so'\n",
-    "require(\"lfs\")"
+    "-- get user input\n",
+    "--the_input = io.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7149da12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "/Users/ymmtny/Documents/GitHub/kwik-visual-code/develop/Solar2D/kwik-editor-proj/Solar2D \n",
-      "found dir, .  containing: \n",
-      " . \n",
-      " .. \n",
-      " License.md \n",
-      " create_dummy_images.command \n",
-      " en.lproj \n",
-      " .DS_Store \n",
-      " extlib \n",
-      " App \n",
-      " Icon-osx.icns \n",
-      " main.lua \n",
-      " io.ipynb \n",
-      " plugin \n",
-      " server \n",
-      " models \n",
-      " AndroidResources \n",
-      " config.lua \n",
-      " controller \n",
-      " mySplashScreen.png \n",
-      " README.md \n",
-      " components \n",
-      " Images.xcassets \n",
-      " lib \n",
-      " LaunchScreen.storyboardc \n",
-      " .ipynb_checkpoints \n",
-      " commands \n",
-      " copy_action.lua \n",
-      " main.lua.debug \n",
-      " assets \n",
-      " Icon-win32.ico \n",
-      " build.settings \n",
-      " editor \n",
-      "found dir, ..  containing: \n",
-      " . \n",
-      " .. \n",
-      " delete_lua.command \n",
-      " backup_lua.command \n",
-      " .DS_Store \n",
-      " LICENSE \n",
-      " Solar2D \n",
-      " tmp.log \n",
-      " Photoshop \n",
-      " copy_lua.command \n",
-      " .gitignore \n",
-      " BookServer \n",
-      " undo_lua.command \n",
-      " .git \n",
-      "found file, License.md \n",
-      "found file, create_dummy_images.command \n",
-      "found dir, en.lproj  containing: \n",
-      " . \n",
-      " .. \n",
-      " InfoPlist.strings \n",
-      "found file, .DS_Store \n",
-      "found dir, extlib  containing: \n",
-      " . \n",
-      " .. \n",
-      " spyric \n",
-      " slider.lua \n",
-      " transition2lib \n",
-      " dmc_touch.lua \n",
-      " dmc_touchmanager.lua \n",
-      " shapes.lua \n",
-      " lustache.lua \n",
-      " index.lua \n",
-      " gtween.lua \n",
-      " Deferred.lua \n",
-      " syncSound.lua \n",
-      " align.lua \n",
-      " kNavi.lua \n",
-      " plugin \n",
-      " robotlegs \n",
-      " materialui \n",
-      " formatter.lua \n",
-      " inspect.lua \n",
-      " dmc_gesture.lua \n",
-      " transitionfilter.lua \n",
-      " Callbacks.lua \n",
-      " dragitemscrollview.lua \n",
-      " convertcolor.lua \n",
-      " wildcard.lua \n",
-      " dmc_multitouch.lua \n",
-      " colorPicker.lua \n",
-      " pretty \n",
-      " transition2.lua \n",
-      " dmc_utils.lua \n",
-      " lustache \n",
-      " lunatest.lua \n",
-      " com \n",
-      " pprint.lua \n",
-      " nanostores \n",
-      " btween.lua \n",
-      " iap_badger.lua \n",
-      "found dir, App  containing: \n",
-      " . \n",
-      " .. \n",
-      " book \n",
-      "found file, Icon-osx.icns \n",
-      "found file, main.lua \n",
-      "found file, io.ipynb \n",
-      "found dir, plugin  containing: \n",
-      " . \n",
-      " .. \n",
-      " mouseHover.lua \n",
-      " mouseHover \n",
-      "found dir, server  containing: \n",
-      " . \n",
-      " .. \n",
-      " doPost.lua \n",
-      " harness.lua \n",
-      " mimetypes.lua \n",
-      " index.lua \n",
-      " tests \n",
-      " docs \n",
-      " config.lua \n",
-      " controller \n",
-      " pegasus \n",
-      " doPut.lua \n",
-      " yaml.lua \n",
-      " ReadMe.txt \n",
-      " doDelete.lua \n",
-      " sampleUI \n",
-      " doGet.lua \n",
-      "found dir, models  containing: \n",
-      " . \n",
-      " .. \n",
-      " page2 \n",
-      "found dir, AndroidResources  containing: \n",
-      " . \n",
-      " .. \n",
-      " res \n",
-      "found file, config.lua \n",
-      "found dir, controller  containing: \n",
-      " . \n",
-      " .. \n",
-      " Application.lua \n",
-      " ApplicationContext.lua \n",
-      " index.lua \n",
-      " componentHandler.lua \n",
-      " ApplicationMediator.lua \n",
-      " mediator.lua \n",
-      " commonComponentHandler.lua \n",
-      " model.lua \n",
-      " ApplicationUI.lua \n",
-      " componentLocalHandler.lua \n",
-      " defaults.lua \n",
-      " sceneHandler.lua \n",
-      " scene.lua \n",
-      "found file, mySplashScreen.png \n",
-      "found file, README.md \n",
-      "found dir, components  containing: \n",
-      " . \n",
-      " .. \n",
-      " .DS_Store \n",
-      " bookstore \n",
-      " common \n",
-      " mui \n",
-      " kwik \n",
-      " custom \n",
-      "found dir, Images.xcassets  containing: \n",
-      " . \n",
-      " .. \n",
-      " AppIcon.appiconset \n",
-      " Contents.json \n",
-      "found dir, lib  containing: \n",
-      " . \n",
-      " .. \n",
-      " queue.lua \n",
-      " stack.lua \n",
-      " util.lua \n",
-      "found dir, LaunchScreen.storyboardc  containing: \n",
-      " . \n",
-      " .. \n",
-      " 01J-lp-oVM-view-Ze5-6b-2t3.nib \n",
-      " designable.storyboard \n",
-      " UIViewController-01J-lp-oVM.nib \n",
-      " Info.plist \n",
-      "found dir, .ipynb_checkpoints  containing: \n",
-      " . \n",
-      " .. \n",
-      " io-checkpoint.ipynb \n",
-      "found dir, commands  containing: \n",
-      " . \n",
-      " .. \n",
-      " app \n",
-      " common \n",
-      " kwik \n",
-      "found file, copy_action.lua \n",
-      "found file, main.lua.debug \n",
-      "found dir, assets  containing: \n",
-      " . \n",
-      " .. \n",
-      " images \n",
-      " mui \n",
-      " kwik \n",
-      "found file, Icon-win32.ico \n",
-      "found file, build.settings \n",
-      "found dir, editor  containing: \n",
-      " . \n",
-      " .. \n",
-      " kwik_json \n",
-      " page \n",
-      " shape \n",
-      " index.lua \n",
-      " asset \n",
-      " picker \n",
-      " clipboard.lua \n",
-      " variable \n",
-      " group \n",
-      " timer \n",
-      " tests \n",
-      " template \n",
-      " animation \n",
-      " model.lua \n",
-      " trash \n",
-      " replacement \n",
-      " controller \n",
-      " tmp.json \n",
-      " readme.md \n",
-      " rename_page.command \n",
-      " action \n",
-      " audio \n",
-      " layer \n",
-      " scripts \n",
-      " book \n",
-      " parts \n",
-      " lib \n",
-      " util.lua \n",
-      " physics \n",
-      " interaction \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lfs = require(\"lfs\")\n",
-    "test=lfs.currentdir()\n",
-    "print(test)\n",
+    "--\n",
+    "local function list(_test)\n",
+    "  local test = _test or lfs.currentdir()\n",
+    "  lfs.chdir(test)\n",
+    "  print(test)\n",
+    "  for file in lfs.dir(test) do\n",
+    "      if lfs.attributes(file,\"mode\") == \"file\" then print(\"found file, \"..file)\n",
+    "      elseif lfs.attributes(file,\"mode\")== \"directory\" then print(\"found dir, \"..file,\" containing:\")\n",
+    "          for l in lfs.dir(file) do\n",
+    "              print(\"\",l)\n",
+    "          end\n",
+    "      end\n",
+    "  end\n",
+    "end\n",
     "\n",
-    "for file in lfs.dir(test) do\n",
-    "    if lfs.attributes(file,\"mode\") == \"file\" then print(\"found file, \"..file)\n",
-    "    elseif lfs.attributes(file,\"mode\")== \"directory\" then print(\"found dir, \"..file,\" containing:\")\n",
-    "        for l in lfs.dir(file) do\n",
-    "             print(\"\",l)\n",
-    "        end\n",
-    "    end\n",
-    "end"
+    "--list(test..\"/extlib/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "28de5f86-db89-4027-9291-d3d5502e7539",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "table \n",
-      "brushWhite 1,1,1,1 \n",
-      "File copied and word replaced successfully! \n",
-      "brushYellow 1,1,0,1 \n",
-      "File copied and word replaced successfully! \n",
-      "brushLightBlue 150/255,200/255,0,1 \n",
-      "File copied and word replaced successfully! \n",
-      "brushBlue 1,0,0,1 \n",
-      "File copied and word replaced successfully! \n",
-      "brushPink 0,0,0,1 \n",
-      "File copied and word replaced successfully! \n",
-      "brushGreen 1,0,1,1 \n",
-      "File copied and word replaced successfully! \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "package.loaded[\"./copy_action\"] = nil\n",
     "script = require(\"./copy_action\")\n",
-    "print(type(script))\n",
-    "script:createFiles()"
+    "\n",
+    "script:init(\"book\", \"page12\")\n",
+    "\n",
+    "action = \"brushBlack\"\n",
+    "word   = \"0,0,0,1\"\n",
+    "\n",
+    "-- new action events to be created\n",
+    "actions = {\"brushWhite\", \"brushYellow\", \"brushLightBlue\", \"brushBlue\", \"brushPink\", \"brushGreen\"}\n",
+    "-- replace word for words[i]\n",
+    "words = {\n",
+    "  \"1,1,1,1\",\n",
+    "  \"1,1,0,1\",\n",
+    "  \"150/255,200/255,0,1\",\n",
+    "  \"1,0,0,1\",\n",
+    "  \"0,0,0,1\",\n",
+    "  \"1,0,1,1\",\n",
+    "  \"0,1,0,1\"\n",
+    "}\n",
+    "script:setSource(action, word)\n",
+    "script:setNewActions(actions, words)\n",
+    "\n",
+    "--script:createFiles()\n",
+    "--script:updateIndex()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "223494b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a7f0f808",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "679ce014",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd01456e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "290677af",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ef9ad5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84ccb030",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a00f758",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2b94eccd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c12bf356",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75970e03",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fae6f9e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c402e4cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9dfa6993",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b14fb3c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa850b02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
