--- a/xeus/io.ipynb
+++ b/xeus/io.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "4db57b82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true exit 0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "os.execute(\"code ../Solar2D/main.lua\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "29975071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "book = \"book\"\n",
+    "os.execute(\"code ../Solar2D/App/\"..book..\"/index.lua\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "e5c74c7f-379a-4c34-9c1f-de24a7c26a67",
    "metadata": {},
