WIP create book

--- a/xeus/network.ipynb
+++ b/xeus/network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,38 @@
    "source": [
     "package.loaded[\"./hprint_ini\"] = nil\n",
     "require(\"./hprint_ini\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## add book"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local unitTest = \"suite_new_book_page_layer\"\n",
+    "g_data = {}\n",
+    "g_data.editor = require(\"editor.index\")\n",
+    "g_data.mod = require(unitTest)\n",
+    "helper = require(\"editor.tests.helper\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_data.mod.test = function()\n",
+    "end\n",
+    "\n",
+    "g_data.editor:runTest()\n"
    ]
   },
   {
