--- a/xeus/simulator.ipynb
+++ b/xeus/simulator.ipynb
@@ -28,6 +28,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## add book"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## add pages\n",
     "kwik\n",
     "- New shape in component view\n",
